@@ -1,3 +1,8 @@
+2006-03-25  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/prefs.c: use g_str_has_prefix instead of a local copy
+	of the function.
+
 2006-03-18  Vladimer Sichinava  <vlsichinava@gmail.com>
 
         * configure.in: Added "ka" (Georgian) to ALL_LINGUAS
